--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -10,7 +10,7 @@
     <title>Crud Operations</title>
   </head>
   <body>
-    <div id="root">asdzz</div>
+    <div id="root">asd</div>
     <script type="module" src="../app.js"></script>
   </body>
 </html>
